--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-slick": "^0.29.0",
+    "styled-components": "^6.0.3",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.2"
   }
 }
