--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon -w server.js server.js ",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js ",
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "google-auth-library": "^8.9.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
     "next": "13.4.3",
+    "nodemon": "^3.0.1",
+    "nookies": "^2.5.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -18,6 +30,7 @@
     "react-slick": "^0.29.0",
     "styled-components": "^6.0.3",
     "swiper": "^10.0.4",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "uuid": "^9.0.0"
   }
 }
