--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.3",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
